fix: prevent import activities dialog from overflowing screen

--- a/apps/client/src/app/pages/portfolio/activities/import-activities-dialog/import-activities-dialog.scss
+++ b/apps/client/src/app/pages/portfolio/activities/import-activities-dialog/import-activities-dialog.scss
@@ -2,8 +2,6 @@
   display: block;
 
   .mat-mdc-dialog-content {
-    max-height: unset;
-
     a {
       color: rgba(var(--palette-primary-500), 1);
     }
